--- a/ssis_app/templates/course_list.html
+++ b/ssis_app/templates/course_list.html
@@ -37,7 +37,7 @@
                     <input id="course_name" name="course_name" value="{{ course[1] }}" hidden>
 
                     <div class="custom-select college">
-                        <select name="college_code" id="college_code" required style="
+                        <select hidden name="college_code" id="college_code" required style="
                         width: 450px;
                         height: 40px;
                         border-radius: 5px;
