--- a/ssis_app/templates/student_list.html
+++ b/ssis_app/templates/student_list.html
@@ -51,6 +51,7 @@
 
                 <!-- DELETE -->
                 <form method="POST" action="/student/delete/">
+                    <input name="csrf_token" value="{{ csrf_token() }}" hidden />
                     <input id="studentID" name="studentID" value="{{ student[0] }}" hidden>
                     <input id="first_name" name="first_name" value="{{ student[1] }}" hidden>
                     <input id="last_name" name="last_name" value="{{ student[2] }}" hidden>
