--- a/ssis_app/templates/course_list.html
+++ b/ssis_app/templates/course_list.html
@@ -11,10 +11,17 @@
 </nav>
 
 <h3 class="header">LIST OF COURSES</h3>
-<div class="search-bar">
-    <input type="text" placeholder="SEARCH">
-    <button type="submit"><i class="fa fa-search"></i></button>
+
+<div class="search-container">
+    <form method="POST" action="/course/search/" id="search-form">
+        <input name="csrf_token" value="{{ csrf_token() }}" hidden />
+        <div class="search-bar">
+            <input type="text" name="query" id="search" placeholder="SEARCH">
+            <button type="submit"><i class="fa fa-search"></i></button>
+        </div>
+    </form>
 </div>
+
 <a href="{{ url_for('course.add_course') }}" class="custom-add-button">+ ADD COURSE</a>
 
 <div class="table-container">
